Overflow in searchbar fixed

--- a/src/app/search-list/search-list.component.css
+++ b/src/app/search-list/search-list.component.css
@@ -4,10 +4,14 @@
 
 #center {
   /*border: 3px solid red;*/
+  padding: 0;
 }
 
 #right {
-  /*border: 3px solid blue;*/
+  border: 3px solid blue;
+}
+.row {
+  margin: 0;
 }
 
 .resultsColumn {
